6992189: G1: inconsistent base used in sparse rem set iterator

The remembered set iterator for sparse tables incorrectly assumes that index 0 corresponds to the bottom of the heap, not address 0 as it is the case.

Reviewed-by: ysr, jmasa